{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 9,
  "lineage": "2077cdb0-0296-fdf1-c07f-9aa78c5952b9",
  "resources": [
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:807383789153:vpc/vpc-39ba3e52",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-b2ed6dda",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-cb49f6a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-39ba3e52",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f0e7ce9b",
            "owner_id": "807383789153",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:loadbalancer/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7",
            "arn_suffix": "app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7",
            "dns_name": "terraform-asg-wordpress-lb-237831722.eu-central-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:loadbalancer/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-wordpress-lb",
            "security_groups": [
              "sg-05f52f8a787d93af6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0985c362"
              },
              {
                "subnet_id": "subnet-6d0a9520"
              },
              {
                "subnet_id": "subnet-e110af9c"
              }
            ],
            "subnets": [
              "subnet-0985c362",
              "subnet-6d0a9520",
              "subnet-e110af9c"
            ],
            "vpc_id": "vpc-39ba3e52",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "depends_on": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:listener/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7/6dc8fbd1abdaf059",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:listener/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7/6dc8fbd1abdaf059",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:loadbalancer/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:targetgroup/terraform-asg-example/655ae9e2a2650291",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:listener-rule/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7/6dc8fbd1abdaf059/1f4164ce4d5c3bae",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:listener-rule/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7/6dc8fbd1abdaf059/1f4164ce4d5c3bae",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:listener/app/terraform-asg-wordpress-lb/94dcfb6c8c517fe7/6dc8fbd1abdaf059",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.asg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:targetgroup/terraform-asg-example/655ae9e2a2650291",
            "arn_suffix": "targetgroup/terraform-asg-example/655ae9e2a2650291",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:807383789153:targetgroup/terraform-asg-example/655ae9e2a2650291",
            "lambda_multi_value_headers_enabled": false,
            "name": "terraform-asg-example",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-39ba3e52"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:807383789153:security-group/sg-05f52f8a787d93af6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f52f8a787d93af6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": null,
            "owner_id": "807383789153",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-39ba3e52"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "module.elb.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:807383789153:security-group/sg-0c196627949ffa345",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c196627949ffa345",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "807383789153",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-39ba3e52"
          }
        }
      ]
    }
  ]
}